# pwnall-stack-specs

./: README.md  SKILL.md
assets/: .gitignore  pyproject.toml
references/: api-serving.md  document-ocr.md  environment-git.md  environment-homebrew.md  environment-node.md  environment-python.md  image-detection.md  image-manipulation.md  jupyter.md  lm-system-prompt.md  semantic-search.md  storage.md
scripts/: environment-bash-profile.sh  environment-install-deps.sh
