[project]
name = "project-name"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.10"]
build-backend = "uv_build"

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-ra --quiet"
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]  # Conflicts with the formatter.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is idiomatic in Pytest.

[tool.ruff.lint.pydocstyle]
convention = "google"
